# FraudDetection

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  train_model.py
app/: app.py  plots.py
src/app/: app.py
src/ingestion/: kafka_producer.py
src/model_training/: model.py  preprocessing.py  schemas.py  spark.py  train_model.py
