[tool.poetry]
name = "frauddetection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
datetime = "^5.5"
pyspark = "^3.5.4"
kafka = "^1.3.5"
kafka-python = "^2.0.2"
matplotlib = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
